[package]
name = "htsget"
version = "0.1.0"
edition = "2021"

[dependencies]
crypt4gh = "0.4.1"
#crypt4gh = { version = "0.4.1", git = "https://github.com/EGA-archive/crypt4gh-rust/" }
noodles =  { version = "0.78", features = ["async", "core", "bam", "htsget"]}
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
reqwest = "0.12"
bincode = "1.3"
